--- a/index.html
+++ b/index.html
@@ -390,8 +390,7 @@
 
 				<article id="blog" class="wrapper style3">
 					<div class="container">
-				<div class="powr-tumblr-feed" id="e6ce5ce8_1602106431"></div><script src="https://www.powr.io/powr.js?platform=html"></script>
-				
+						<iframe src="https://tumblrwidget.com/#/embed/nielisson/true/true/true/537d8d/383838/" width="600" height="600"></iframe>				
 				</div>
 
 			</div>
