--- a/index.html
+++ b/index.html
@@ -372,7 +372,7 @@
 						</div>
 					</article>
 		<!-- Blog -->
-		<article id="blog" class="wrapper style3">
+	<!-- <article id="blog" class="wrapper style3">
 			<div class="container">
 				<header><h2>Blog</h2></header>
 				<div class="row aln-center">
@@ -384,13 +384,16 @@
 				<br><br>
 				
 				<p>Read more on my <a href="https://nielisson.tumblr.com">Tumblr</a>.</p>
-				</div>
+				</div> 
 			</div>
-				</article>
+				</article>-->	
 
-				<article id="blog" class="wrapper style3">
+				<article id="blog" class="wrapper style5">
 					<div class="container">
-						<iframe src="https://tumblrwidget.com/#/embed/nielisson/true/true/true/537d8d/383838/" width="600" height="600"></iframe>				
+						<header><h2>Blog</h2></header>
+						<p>In this blog, I mostly playtest indie games and give my first impressions about them.</p>
+						<br>
+						<iframe src="https://tumblrwidget.com/#/embed/nielisson/true/true/true/537d8d/383838/" width="1200" height="600"></iframe>				
 				</div>
 
 			</div>
