--- a/index.html
+++ b/index.html
@@ -363,6 +363,8 @@
 										  </ul> 
 
 
+									</section>
+								
 
 								<div class="col-4 col-6-medium col-12-small">
 									<section class="box style1">
