--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
 
 
 		<!-- SKILLS  -->
-					<article id="skills" class="wrapper style3">
+					<article id="skills" class="wrapper style1">
 						<div class="container">
 							<header>
 								<h2>Main Skills</h2>
@@ -316,7 +316,7 @@
 							</header>
 							<div class="row aln-left">
 								<div class="col-4 col-6-medium col-12-small">
-									<section class="box style2">
+									<section class="box style1 h3">
 										<!-- <span class="icon featured fa-comments"></span>//-->
 										<img src="images/icon_game.png" width="300" height="300" alt="">
 										
