--- a/index.html
+++ b/index.html
@@ -314,9 +314,9 @@
 								<h2>Main Skills</h2>
 								<p>Learn more about my <i>savoir-faire</i></p>
 							</header>
-							<div class="row aln-left">
+							<div class="row aln-center">
 								<div class="col-4 col-6-medium col-12-small">
-									<section class="box style1 h3">
+									<section class="box style1">
 										<!-- <span class="icon featured fa-comments"></span>//-->
 										<img src="images/icon_game.png" width="300" height="300" alt="">
 										
