--- a/index.html
+++ b/index.html
@@ -366,17 +366,21 @@
 										</section>
 									</div>	
 
-								<div class="col-4 col-6-medium col-12-small">
-									<section class="box style1">
-									<!--	<span class="icon featured fa-thumbs-up"></span> //-->
-										<img src="images/icon_art2.png" width="300" height="300"  alt="">
+								<div class="row aln-center">
+									<section class="box style2">
+									<!--	<span class="icon featured fa-thumbs-up"></span> //
+										<img src="images/icon_art2.png" width="300" height="300"  alt="">-->
 										
-										<h3>Art</h3>
-										<p align="justify">While my specialty is 2D art, including UI interface, I am also endeavoring in the low-poly 3D environment.</p>
+										<h3>Softwares and Tools I use</h3>
+										<p align="justify">.</p>
 										<ul>
-											<li><a href="https://www.behance.net/nielisson">Illustrations</a></li>
-											<li><a href="https://www.behance.net/gallery/77308707/Photography">Photography</a></li>
-											<li>Article: <a href="https://www.academia.edu/44227825/Arts_plastique_et_r%C3%A9alit%C3%A9_virtuelle_vers_une_nouvelle_forme_de_mus%C3%A9e?source=swp_share">Fine Arts and VR</a> (in French)</li>
+											<li>Video editing: Final Cut Pro, Adobe Première</li>
+											<li>Programming language: C#</li>
+											<li>Game Engines: Unity, Unreal Engine</li>
+											<li>Project management: Trello, XMind and Scrum</li>
+											<li>Web: Github pages, Wordpress</li>
+											<li>Community management: Discord, Kickstarter, Reddit and most popular social networks</li>
+											<li>Source Control: Git, Fork, SourceTree</li>
 										  </ul> 
 
 									</section>
