--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Nielisson's Portfolio</title>
+		<title>Nielisson Mendonça: 2D Artist and Game Designer</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -364,15 +364,20 @@
 										  </ul> 
 
 										</section>
-									</div>	
-
+								</div>	
+								<br>
 								<div class="row aln-center">
 									<section class="box style2">
 									<!--	<span class="icon featured fa-thumbs-up"></span> //
-										<img src="images/icon_art2.png" width="300" height="300"  alt="">-->
+										<img src="images/icon_art2.png" width="300" height="300"  alt="">
+										<p align="justify">.</p> 
+										<footer>
+								<p>Besides these skills, I am also familiar with the agile development methodology. If you want to learn more about me, 
+									please check my <a href="https://www.upwork.com/o/profiles/users/_~01173b6fb6278d87ca/">Upwork profile.</a></p>
+							</footer>
+									-->
 										
 										<h3>Softwares and Tools I use</h3>
-										<p align="justify">.</p>
 										<ul>
 											<li>Video editing: Final Cut Pro, Adobe Première</li>
 											<li>Programming language: C#</li>
@@ -383,14 +388,14 @@
 											<li>Source Control: Git, Fork, SourceTree</li>
 										  </ul> 
 
+										  <p>Besides these skills, I am also familiar with the agile development methodology. If you want to learn more about me, 
+											please check my <a href="https://www.upwork.com/o/profiles/users/_~01173b6fb6278d87ca/" target="_blank">Upwork profile.</a></p>
+
 									</section>
 								</div>
 
 							</div>
-							<footer>
-								<p>Besides these skills, I am also familiar with the agile development methodology. If you want to learn more about me, 
-									please check my <a href="https://www.upwork.com/o/profiles/users/_~01173b6fb6278d87ca/">Upwork profile.</a></p>
-							</footer>
+						
 						</div>
 					</article>
 		<!-- Blog -->
