--- a/index.html
+++ b/index.html
@@ -365,9 +365,8 @@
 
 										</section>
 								</div>	
-								<br><br><br>
-								<div class="row aln-center">
-									<section class="box style2">
+								<div class="row aln-middle">
+									<section class="box style1">
 									<!--	<span class="icon featured fa-thumbs-up"></span> //
 										<img src="images/icon_art2.png" width="300" height="300"  alt="">
 										<p align="justify">.</p> 
