--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@
 
 										</section>
 								</div>	
-								<div class="row aln-middle">
+								<div class="col-4 col-6-medium col-12-small">
 									<section class="box style1">
 									<!--	<span class="icon featured fa-thumbs-up"></span> //
 										<img src="images/icon_art2.png" width="300" height="300"  alt="">
