--- a/index.html
+++ b/index.html
@@ -365,17 +365,8 @@
 
 										</section>
 								</div>	
-								<div class="col-4 col-6-medium col-12-small">
-									<section class="box style1">
-									<!--	<span class="icon featured fa-thumbs-up"></span> //
-										<img src="images/icon_art2.png" width="300" height="300"  alt="">
-										<p align="justify">.</p> 
-										<footer>
-								<p>Besides these skills, I am also familiar with the agile development methodology. If you want to learn more about me, 
-									please check my <a href="https://www.upwork.com/o/profiles/users/_~01173b6fb6278d87ca/">Upwork profile.</a></p>
-							</footer>
-									-->
-										
+								<div class="row">
+									<section class="box style1">	
 										<h3>Softwares and Tools I use</h3>
 										<ul>
 											<li><b>Video editing:</b> Final Cut Pro, Adobe Première</li>
