--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@
 										</section>
 								</div>	
 							</div>
-							
+
 							<article id="skills" class="wrapper style3">
 								<div class="container">
 									<div class="row">
@@ -372,12 +372,12 @@
 										<h3>Softwares and Tools I use</h3>
 										<ul>
 											<li><b>Video editing:</b> Final Cut Pro, Adobe Première</li>
-											<li><b>Programming/Markup language:</b> C# (intermediate), HTML and CSS/Javascript (beginner)</li>
-											<li><b>Game Engines:</b> Unity, Unreal Engine</li>
+											<li><b>Programming/markup language:</b> C# (intermediate), HTML and CSS/Javascript (beginner)</li>
+											<li><b>Game engines:</b> Unity, Unreal Engine</li>
 											<li><b>Project management:</b> Trello, XMind and Scrum</li>
 											<li><b>Web:</b> Github pages, Wordpress</li>
 											<li><b>Community management:</b> Discord, Kickstarter, Reddit and most popular social networks</li>
-											<li><b>Source Control:</b> Git, Fork, SourceTree</li>
+											<li><b>Source control:</b> Git, Fork, SourceTree</li>
 										  </ul> 
 
 										  <p>Besides these skills, I am also familiar with the agile development methodology. If you want to learn more about me, 
