--- a/index.html
+++ b/index.html
@@ -365,8 +365,8 @@
 								</div>	
 							</div>
 
-							<!--<article id="skills" class="wrapper style3">
-								<div class="container">-->
+							<article id="skills" class="wrapper style3">
+								<div class="container">
 									<div class="row">
 									<section class="box style1">	
 										<h3>Softwares and Tools I use</h3>
@@ -385,7 +385,7 @@
 
 									</section>
 									</div>
-								
+								</div>
 						</div>
 						
 					</article>
