--- a/index.html
+++ b/index.html
@@ -371,16 +371,19 @@
 									<section class="box style1">	
 										<h3>Softwares and Tools I use</h3>
 										<ul>
-											<li><b>Video editing:</b> Final Cut Pro, Adobe Première</li>
-											<li><b>Programming/markup language:</b> C# (intermediate), HTML and CSS/Javascript (beginner)</li>
-											<li><b>Game engines:</b> Unity, Unreal Engine</li>
-											<li><b>Project management:</b> Trello, XMind and Scrum</li>
-											<li><b>Web:</b> Github pages, Wordpress</li>
 											<li><b>Community management:</b> Discord, Kickstarter, Reddit and most popular social networks</li>
+											<li><b>Game engines:</b> Unity, Unreal Engine</li>
+											<li><b>Programming/markup language:</b> C# (intermediate), HTML and CSS/Javascript (beginner)</li>
+											<li><b>Project management:</b> Trello, XMind and Scrum</li>
 											<li><b>Source control:</b> Git, Fork, SourceTree</li>
+											<li><b>Video editing:</b> Final Cut Pro, Adobe Première</li>
+											<li><b>Web:</b> Github pages, Wordpress</li>
+
+
 										  </ul> 
 
-										  <p>Besides these skills, I am also familiar with the agile development methodology. If you want to learn more about me, 
+										  <p>Besides these skills, I am also familiar with the agile development methodology. As a game designer, I aim to create meaningful
+											   and fun games as a result of a properly designed procedural rhetoric. If you want to learn more about my game design experience, 
 											please check my <a href="https://www.upwork.com/o/profiles/users/_~01173b6fb6278d87ca/" target="_blank">Upwork profile.</a></p>
 
 									</section>
