--- a/index.html
+++ b/index.html
@@ -414,8 +414,8 @@
 						<header><h2>Blog</h2></header>
 						<p>In this blog, I mostly playtest indie games and give my first impressions about them.</p>
 						<br>
-					<!-- 	<iframe src="https://tumblrwidget.com/#/embed/nielisson/true/true/true/8ca1b4/8ca1b4/" width="1200" height="600"></iframe>-->
-					<iframe src="https://nielisson.tumblr.com/" width="1200" height="600"></iframe>
+					<!-- 	<iframe src="https://nielisson.tumblr.com/" width="1200" height="600"></iframe>-->
+					<iframe src="https://tumblrwidget.com/#/embed/nielisson/true/true/true/8ca1b4/8ca1b4/" width="1200" height="600"></iframe>
 					</div>
 
 			</div>
