--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
 								<a href="https://nielisson.itch.io/tiny-elves" class="image featured" target="_blank"><img src="images/portfolio_thumbnails/tinyelves.gif" alt="" /></a>
-								<h3><a href="https://nielisson.itch.io/tiny-elves" target="_blank">Tiny Elves: mighty friendship</a></h3>
+								<h3 style="left: auto;"><a href="https://nielisson.itch.io/tiny-elves" target="_blank">Tiny Elves: mighty friendship</a></h3>
 								<p><i>Personal project - 09/2019</i></p>
 								<p>Lost in a strange world, these tiny elves will have to make proof of their friendship by working together.</p>
 								<p>Roles: <b>Art | Game and Level Design</b></p>	
