--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
 								<a href="https://nielisson.itch.io/tiny-elves" class="image featured" target="_blank"><img src="images/portfolio_thumbnails/tinyelves.gif" alt="" /></a>
-								<h3 style="left: auto;"><a href="https://nielisson.itch.io/tiny-elves" target="_blank">Tiny Elves: mighty friendship</a></h3>
+								<h3><a href="https://nielisson.itch.io/tiny-elves" target="_blank">Tiny Elves: mighty friendship</a></h3>
 								<p><i>Personal project - 09/2019</i></p>
 								<p>Lost in a strange world, these tiny elves will have to make proof of their friendship by working together.</p>
 								<p>Roles: <b>Art | Game and Level Design</b></p>	
@@ -340,7 +340,7 @@
 										<span class="fab fa-unity"></span> 
 										<img src="images/icon_unity.png" width="300" height="300" alt="">
 										
-										<h3>Unity</h3>
+										<h3>Development</h3>
 										<p align="justify">Most of my games were made on Unity, so I am quite capable on this software. Besides the standard functionalities, 
 										I am also familiar with Pro Builder, Tilemap system, 
 										Post Processing and the particle system. Futhermore, I have learned how to code in C#, which allows me to assist the programmer. That also 
