--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@
 							<article class="box style2">
 								<a href="https://nielisson.itch.io/sky-puppy" class="image featured" target="_blank"><img src="images/portfolio_thumbnails/skypuppy.png" alt="" /></a>
 								<h3><a href="https://nielisson.itch.io/sky-puppy" target="_blank">SkyPuppy</a></h3>
-								<p>(soon released for mobile)</p>
-								<p>The Tenth Creative Games Jam - 02/2019</p>
+								<p style="font-size: small;">(soon released for mobile)<br>
+								The Tenth Creative Games Jam - 02/2019</p>
 								<p>In this little puzzle, the player is supposed to make a clear path for a dog that is trapped in a house on fire. Watch the gameplay by the youtuber Nathan Blake.</p>
 								<p>Roles: <b>Art | Game and Level Design</b></p>
 								<a href="https://www.youtube.com/watch?v=TJwKPe-8M9E&feature=emb_title" class="button small scrolly" target="_blank">Watch</a>																															
