--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 				<div class="container">
 					<header>
 						<h2>Portfolio</h2>
-						<p>These are my favorite projects, some of them are from game jams, personal or student projects.</p>
+						<p>These are my favorite games, some of them are personal or student projects, and many of them are from game jams.</p>
 					</header>
 					<div class="row">
 						<div class="col-4 col-6-medium col-12-small">
@@ -92,7 +92,7 @@
 							<article class="box style2">
 								<a href="https://nielisson.itch.io/sky-puppy" class="image featured" target="_blank"><img src="images/portfolio_thumbnails/skypuppy.png" alt="" /></a>
 								<h3><a href="https://nielisson.itch.io/sky-puppy" target="_blank">SkyPuppy</a></h3>
-								<p style="font-size: small;">(soon released for mobile)<br>
+								<p style="font-size: small;">(soon released for mobile)
 								The Tenth Creative Games Jam - 02/2019</p>
 								<p>In this little puzzle, the player is supposed to make a clear path for a dog that is trapped in a house on fire. Watch the gameplay by the youtuber Nathan Blake.</p>
 								<p>Roles: <b>Art | Game and Level Design</b></p>
