--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 							<article class="box style2">
 								<a href="https://nielisson.itch.io/candy-tower" class="image featured" target="_blank"><img src="images/portfolio_thumbnails/candy_tower.png" alt="Candy Tower" /></a>
 								<h3><a href="https://nielisson.itch.io/candy-tower" target="_blank">Candy Tower</a></h3>
-								<p>Student project - 08/2020</p>
+								<p style="font-size: small;"><i>Student project - 08/2020</i></p>
 								<p>In this tower defense, your main objective is to destroy all teeth with candies! Isn't that what candies do?</p>
 								<p>Roles: <b>Art | Programming</b></p>
 								<a href="https://youtu.be/GnKbWBe_xkk" class="button small scrolly" target="_blank">Watch</a>																																															
@@ -71,7 +71,7 @@
 							<article class="box style2">
 								<a href="https://dyoxyne.itch.io/playback-brackeys-jam-20202" class="image featured" target="_blank"><img src="images/portfolio_thumbnails/playback-gif.gif" alt="Playback" /></a>
 								<h3><a href="https://dyoxyne.itch.io/playback-brackeys-jam-20202" target="_blank">Playback</a></h3>
-								<p>Brackeys Jam 2020.2 - 08/2020</p>
+								<p style="font-size: small;"><i>Brackeys Jam 2020.2 - 08/2020</i></p>
 								<p>Everyone in town is looking for something to brighten up their day. With the help of your cassette recorder, you can record and rewind the sounds that people need to turn their moods around! Watch <a href="https://youtu.be/OcjV2M3Y9Wg?t=310" target="_blank">Brackeys </a>playing our game.</p>
 								<p>Roles: <b>Art | Game Design</b></p>
 								<a href="https://youtu.be/OcjV2M3Y9Wg?t=310" class="button small scrolly" target="_blank">Watch</a>																																															
@@ -81,7 +81,7 @@
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
 								<a href="http://greedfall.com/" class="image featured" target="_blank"><img src="images/portfolio_thumbnails/greedfall.jpg" alt="" /></a>
-								<h3><a href="http://greedfall.com/" target="_blank">Greedfall</a></h3>(PC, XBOX One and PS4)
+								<h3><a href="http://greedfall.com/" target="_blank">Greedfall</a></h3><i>(PC, XBOX One and PS4)</i>
 								<p>As a GUI integrator, I was responsible for the integration of the UI assets and I also retouched/created several icons and other elements.</p>
 								<p>Role: <b>GUI artist and Integrator (internship)</b></p>			
 								<a href="https://youtu.be/_if32pyZP2w" class="button small scrolly" target="_blank">Watch</a>																																							
@@ -92,8 +92,8 @@
 							<article class="box style2">
 								<a href="https://nielisson.itch.io/sky-puppy" class="image featured" target="_blank"><img src="images/portfolio_thumbnails/skypuppy.png" alt="" /></a>
 								<h3><a href="https://nielisson.itch.io/sky-puppy" target="_blank">SkyPuppy</a></h3>
-								<p style="font-size: small;">(soon released for mobile)
-								The Tenth Creative Games Jam - 02/2019</p>
+								<p style="font-size: small;"><i>(soon released for mobile)<br>
+								The Tenth Creative Games Jam - 02/2019</i></p>
 								<p>In this little puzzle, the player is supposed to make a clear path for a dog that is trapped in a house on fire. Watch the gameplay by the youtuber Nathan Blake.</p>
 								<p>Roles: <b>Art | Game and Level Design</b></p>
 								<a href="https://www.youtube.com/watch?v=TJwKPe-8M9E&feature=emb_title" class="button small scrolly" target="_blank">Watch</a>																															
@@ -104,7 +104,7 @@
 							<article class="box style2">
 								<a href="https://nielisson.itch.io/tiny-elves" class="image featured" target="_blank"><img src="images/portfolio_thumbnails/tinyelves.gif" alt="" /></a>
 								<h3><a href="https://nielisson.itch.io/tiny-elves" target="_blank">Tiny Elves: mighty friendship</a></h3>
-								<p><i>Personal project - 09/2019</i></p>
+								<p style="font-size: small;"><i>Personal project - 09/2019</i></p>
 								<p>Lost in a strange world, these tiny elves will have to make proof of their friendship by working together.</p>
 								<p>Roles: <b>Art | Game and Level Design</b></p>	
 								<a href="https://youtu.be/_xvAYG30d5g" class="button small scrolly" target="_blank">Watch</a>																							
@@ -117,7 +117,7 @@
 							<article class="box style2">
 								<a href="https://www.youtube.com/watch?v=gSYmrgwn3Lo&feature=youtu.be" class="image featured" target="_blank"><img src="images/portfolio_thumbnails/lemaitre.png" alt="" /></a>
 								<h3><a href="https://www.youtube.com/watch?v=gSYmrgwn3Lo&feature=youtu.be" target="_blank">Le maître de la flûte en bois</a></h3>
-								<p>Student project - 12/2018</p>
+								<p style="font-size: small;"><i>Student project - 12/2018</i></p>
 								<p>An adventure about a forest spirit that accompany a flock of birds that are migrating to the south.</p>
 								<p>Roles: <b>Art | Game and Level Design</b></p>								
 								<a href="https://www.youtube.com/watch?v=gSYmrgwn3Lo&feature=youtu.be" class="button small scrolly" target="_blank">Watch</a>
@@ -128,7 +128,7 @@
 							<article class="box style2">
 								<a href="https://nielisson.itch.io/wyvern-circus" class="image featured" target="_blank"><img src="images/portfolio_thumbnails/wyvern.png" alt="" /></a>
 								<h3><a href="https://nielisson.itch.io/wyvern-circus" target="_blank">Wyvern Circus</a></h3>
-								<p>ArtBook and game prototype - 03/2019</p>
+								<p style="font-size: small;"><i>ArtBook and game prototype - 03/2019</i></p>
 								<p>A working dragon who caught a cold. What could go wrong?</p>
 								<p>Roles: <b>Art | Game and Level Design</b></p>	
 								<a href="https://www.behance.net/gallery/79393471/Wyvern-Circus-Artbook" class="button small scrolly" target="_blank">Artbook</a>																							
@@ -140,7 +140,7 @@
 							<article class="box style2">
 								<a href="https://nielisson.itch.io/great-ocean-truck" class="image featured" target="_blank"><img src="images/portfolio_thumbnails/great-gif.gif" alt="" /></a>
 								<h3><a href="https://nielisson.itch.io/great-ocean-truck" target="_blank">Great Ocean Truck</a></h3>
-								<p>Personal project - 10/2019</p>
+								<p style="font-size: small;"><i>Personal project - 10/2019</i></p>
 								<p>When moving out is all about fun and balance!</p>
 								<p>Roles: <b>Art | Game and Level Design</b></p>								
 								<a href="https://www.youtube.com/watch?v=jHvJbw-N3Ak&list=PL2HDE-lq9I_DfnDnGb0Zb0CouIHbHMrnO&index=4&t=0s" class="button small scrolly" target="_blank">Watch</a>															
@@ -153,7 +153,7 @@
 							<article class="box style2">
 								<a href="https://nielisson.itch.io/note-to-self" class="image featured" target="_blank"><img src="https://mir-s3-cdn-cf.behance.net/project_modules/max_1200/0e46fc77304729.5c840c0c0fd66.gif" alt="" /></a>
 								<h3><a href="https://nielisson.itch.io/note-to-self" target="_blank">Note to self:</a></h3>
-								<p>Brackeys Game Jam - 02/2019</p>
+								<p style="font-size: small;"><i>Brackeys Game Jam - 02/2019</i></p>
 								<p>During a brisk autumn night, Hugo wanders the streets in search for his love with utterly no regard for his surroundings. 
 									Our game was featured on <a href="https://youtu.be/XeV0bmTLacM?t=83" target="_blank">Brackeys' channel!</a></p>
 								<p>Roles: <b>Art | Game and Level Design</b></p>	
@@ -166,7 +166,7 @@
 								<article class="box style2">
 									<a href="https://nielisson.itch.io/nobamboo" class="image featured" target="_blank"><img src="images/portfolio_thumbnails/nobamboo.png" alt="" /></a>
 									<h3><a href="https://nielisson.itch.io/nobamboo" target="_blank">NoBamboo</a></h3> 
-									<p>Extra Credits Game Jam - 03/2019</p>
+									<p style="font-size: small;"><i>Extra Credits Game Jam - 03/2019</i></p>
 									<p>Ferdinand was entrusted three special eggs and his mission is to deliver them to the White Temple in order to restore the balance of world.</p>
 									<p>Roles: <b>Art | Game and Level Design</b></p>	
 									<a href="https://youtu.be/TKyT1Yqcmc0" class="button small scrolly" target="_blank">Watch</a>							
@@ -179,7 +179,7 @@
 								<article class="box style2">
 									<a href="https://globalgamejam.org/2019/games/host-shell-0" class="image featured" target="_blank"><img src="images/portfolio_thumbnails/host.gif" alt="" /></a>
 									<h3><a href="https://globalgamejam.org/2019/games/host-shell-0" target="_blank">Host in the Shell</a></h3> 
-									<p>Global Game Jam 2019</p>
+									<p style="font-size: small;"><i>Global Game Jam 2019</i></p>
 									<p>The only survivor of his kind, Thierry L’hermite, undertakes a long adventure that may lead him to the remains of his ancestors.</p>
 									<p>Roles: <b>Game and Level Design</b></p>	
 									<a href="https://youtu.be/Pf1hFFAivgs" class="button small scrolly" target="_blank">Watch</a>							
@@ -191,7 +191,7 @@
 								<article class="box style2">
 									<a href="https://uchiro.itch.io/downwards" class="image featured" target="_blank"><img src="images/portfolio_thumbnails/downwards.gif" alt="" /></a>
 									<h3><a href="https://uchiro.itch.io/downwards" target="_blank">Downwards</a></h3> 
-									<p>Weekly Game Jam - Week 49 - 07/2018</p>
+									<p style="font-size: small;"><i>Weekly Game Jam - Week 49 - 07/2018</i></p>
 									<p>Have you ever been tempted by shiny things?</p>
 									<p>Roles: <b>Art | Game and Level Design</b></p>	
 									<a href="https://youtu.be/xnpIdJqgnM4" class="button small scrolly" target="_blank">Watch</a>							
@@ -203,7 +203,7 @@
 								<article class="box style2">
 									<a href="https://nielisson.itch.io/gardian-occitan" class="image featured" target="_blank"><img src="images/portfolio_thumbnails/gardian.gif" alt="" /></a>
 									<h3><a href="https://nielisson.itch.io/gardian-occitan" target="_blank">Gardian occitan</a></h3> 
-									<p>Game Pratic' 2018 <br><b>(Game jam's winner)</b></p>
+									<p style="font-size: small;"><i>Game Pratic' 2018 <br><b>(Game jam's winner)</i></b></p>
 									<p>In "Gardian occitan", you are invited to discover and to renovate French museums of the Occitan region.</p>
 									<p>Roles: <b>Game Design | UI</b></p>	
 									<a href="https://youtu.be/wdkjYFzfzGc" class="button small scrolly" target="_blank">Watch</a>							
@@ -215,7 +215,7 @@
 								<article class="box style2">
 									<a href="https://nielisson.itch.io/pendulum" class="image featured" target="_blank"><img src="https://mir-s3-cdn-cf.behance.net/project_modules/max_1200/1cc4f777304729.5c844a637ae27.gif" alt="" /></a>
 									<h3><a href="https://nielisson.itch.io/pendulum" target="_blank">Pendulum</a></h3> 
-									<p>Extra Credits Holiday 2018</p>
+									<p style="font-size: small;"><i>Extra Credits Holiday 2018</i></p>
 									<p>Pendulum is a steampunk-inspired 2D platformer. Our hero is striving to survive in this mysterious and hostile place that is full of traps, puzzles and enemies.</p>
 									<p>Roles: <b>Art | Game Design</b></p>	
 									<a href="https://youtu.be/WQEPTHOcTSo" class="button small scrolly" target="_blank">Watch</a>							
