--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
 						<div class="container">
 							<header>
 								<h2>Main Skills</h2>
-								<p>Learn more about my <i>savoir-faire</i></p>
+								<p>Find out more about my <i>savoir-faire</i></p>
 							</header>
 							<div class="row aln-center">
 								<div class="col-4 col-6-medium col-12-small">
@@ -414,8 +414,11 @@
 						<header><h2>Blog</h2></header>
 						<p>In this blog, I mostly playtest indie games and give my first impressions about them.</p>
 						<br>
-					<!-- 	<iframe src="https://nielisson.tumblr.com/" width="1200" height="600"></iframe>-->
+					<!-- 	<iframe src="https://nielisson.tumblr.com/" width="1200" height="600"></iframe>
 					<iframe src="https://tumblrwidget.com/#/embed/nielisson/true/true/true/8ca1b4/8ca1b4/" width="600" height="600"></iframe>
+					-->
+					<iframe src="http://nielisson.mystrikingly.com/#a-game-per-day" width="600" height="600"></iframe>
+
 					</div>
 
 			</div>
