--- a/index.html
+++ b/index.html
@@ -417,7 +417,7 @@
 					<!-- 	<iframe src="https://nielisson.tumblr.com/" width="1200" height="600"></iframe>
 					<iframe src="https://tumblrwidget.com/#/embed/nielisson/true/true/true/8ca1b4/8ca1b4/" width="600" height="600"></iframe>
 					-->
-					<iframe src="http://nielisson.mystrikingly.com/#a-game-per-day" width="600" height="600"></iframe>
+					<iframe src="http://nielisson.mystrikingly.com/a-game-per-day" width="600" height="600"></iframe>
 
 					</div>
 
