--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
 								<p>This is a board game about a concept of time, the game requires a companion application that I coded myself. You may download it down below if you are curious!</p>
 								<p>Roles: <b>Art | Game Design | Programming</b></p>
 								<a href="https://youtu.be/lcnv5tbs73Q" class="button small scrolly" target="_blank">Watch</a>																																															
-								<a href="https://nielisson.itch.io/linstant-t-companion-app" class="button small scrolly" target="_blank">Download</a>
+								<a href="https://nielisson.itch.io/linstant-t-companion-app" class="button small scrolly" target="_blank">More</a>
 								
 							</article>
 						</div>
