--- a/index.html
+++ b/index.html
@@ -410,14 +410,14 @@
 				</article>-->	
 
 				<article id="blog" class="wrapper style5">
-					<div class="container">
+					<div class="container aln-center" style="align-content: center;">
 						<header><h2>Blog</h2></header>
 						<p>In this blog, I mostly playtest indie games and give my first impressions about them.</p>
 						<br>
 					<!-- 	<iframe src="https://nielisson.tumblr.com/" width="1200" height="600"></iframe>
 					<iframe src="https://tumblrwidget.com/#/embed/nielisson/true/true/true/8ca1b4/8ca1b4/" width="600" height="600"></iframe>
 					-->
-					<div class="tumblr-post" style="align-self: center;" data-href="https://embed.tumblr.com/embed/post/8IWEwcU1LFNkiJ3vdx_HXw/631358971063779328" data-did="b6e2dfb106e557e99d6f5b733271c1dd2dce277d"><a href="https://nielisson.tumblr.com/post/631358971063779328/id-like-to-describe-this-as-a-cozy-stress-free">https://nielisson.tumblr.com/post/631358971063779328/id-like-to-describe-this-as-a-cozy-stress-free</a></div>  <script async src="https://assets.tumblr.com/post.js"></script>
+					<div class="tumblr-post" data-href="https://embed.tumblr.com/embed/post/8IWEwcU1LFNkiJ3vdx_HXw/631358971063779328" data-did="b6e2dfb106e557e99d6f5b733271c1dd2dce277d"><a href="https://nielisson.tumblr.com/post/631358971063779328/id-like-to-describe-this-as-a-cozy-stress-free">https://nielisson.tumblr.com/post/631358971063779328/id-like-to-describe-this-as-a-cozy-stress-free</a></div>  <script async src="https://assets.tumblr.com/post.js"></script>
 
 					</div>
 
