--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@
 										<ul>
 											<li><b>Community management:</b> Discord, Kickstarter, Reddit and most popular social networks</li>
 											<li><b>Game engines:</b> Unity, Unreal Engine</li>
-											<li><b>Programming/markup language:</b> C# (intermediate), HTML and CSS/Javascript (beginner)</li>
+											<li><b>Programming/markup language:</b> C# (intermediate), HTML and CSS/JavaScript (beginner)</li>
 											<li><b>Project management:</b> Trello, XMind and Scrum</li>
 											<li><b>Source control:</b> Git, Fork, SourceTree</li>
 											<li><b>Video editing:</b> Final Cut Pro, Adobe Première</li>
@@ -408,19 +408,6 @@
 				</div> 
 			</div>
 				</article>-->	
-
-				<!--	<article id="blog" class="wrapper style6" style="align-content: center;">
-					<div class="container aln-center" style="align-content: center;">
-						<header><h2>Blog</h2></header>
-						<p>In this blog, I mostly playtest indie games and give my first impressions about them.</p>
-						<br>
-					<iframe src="https://nielisson.tumblr.com/" width="1200" height="600"></iframe>
-					<iframe src="https://tumblrwidget.com/#/embed/nielisson/true/true/true/8ca1b4/8ca1b4/" width="600" height="600"></iframe>
-						<div class="row aln-center">
-							<div class="tumblr-post" data-href="https://embed.tumblr.com/embed/post/8IWEwcU1LFNkiJ3vdx_HXw/631358971063779328" style="align-content: center;" data-did="b6e2dfb106e557e99d6f5b733271c1dd2dce277d"><a href="https://nielisson.tumblr.com/post/631358971063779328/id-like-to-describe-this-as-a-cozy-stress-free">https://nielisson.tumblr.com/post/631358971063779328/id-like-to-describe-this-as-a-cozy-stress-free</a></div>  <script async src="https://assets.tumblr.com/post.js"></script>
-						</div>
-					</div>					-->
-
 
 			</div>
 		</article>
