--- a/index.html
+++ b/index.html
@@ -397,13 +397,18 @@
 			<div class="container">
 				<header><h2>Blog</h2></header>
 				<div class="row aln-center">
-<table>
-<tr>
-	<th><p>In this blog, I mostly playtest indie games and give my first impressions about them.</p></th>
-	<th><div class="tumblr-post" data-href="https://embed.tumblr.com/embed/post/8IWEwcU1LFNkiJ3vdx_HXw/631358971063779328" style="align-content: center;" data-did="b6e2dfb106e557e99d6f5b733271c1dd2dce277d"><a href="https://nielisson.tumblr.com/post/631358971063779328/id-like-to-describe-this-as-a-cozy-stress-free">https://nielisson.tumblr.com/post/631358971063779328/id-like-to-describe-this-as-a-cozy-stress-free</a></div>  <script async src="https://assets.tumblr.com/post.js"></script></th>
-	<th><p>Read more on my <a href="https://nielisson.tumblr.com">Tumblr</a>.</p></th>
-</tr>
-</table>
+
+			<table>
+			<tr>
+				<th><p>In this blog, I mostly playtest indie games and give my first impressions about them.</p></th>
+			</tr>
+			<tr>
+				<td><div class="tumblr-post" data-href="https://embed.tumblr.com/embed/post/8IWEwcU1LFNkiJ3vdx_HXw/631358971063779328" style="align-content: center;" data-did="b6e2dfb106e557e99d6f5b733271c1dd2dce277d"><a href="https://nielisson.tumblr.com/post/631358971063779328/id-like-to-describe-this-as-a-cozy-stress-free">https://nielisson.tumblr.com/post/631358971063779328/id-like-to-describe-this-as-a-cozy-stress-free</a></div>  <script async src="https://assets.tumblr.com/post.js"></script></td>
+			</tr>
+			<tr>
+				<td><p>Read more on my <a href="https://nielisson.tumblr.com">Tumblr</a>.</p></td>
+			</tr>
+			</table>
 	
 				</div> 
 			</div>
