--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@
 								<div class="container">
 									<div class="row">
 									<section class="box style1">	
-										<h3>Softwares and Tools I use</h3>
+										<h3>Softwares, Tools and More</h3>
 										<ul>
 											<li><b>Community management:</b> Discord, Kickstarter, Reddit and most popular social networks</li>
 											<li><b>Game engines:</b> Unity, Unreal Engine</li>
@@ -383,7 +383,8 @@
 										  </ul> 
 
 										  <p>Besides these skills, I am also familiar with the <b>agile development methodology</b>. As a game designer, I aim to create meaningful
-											   and fun games as a result of a properly designed procedural rhetoric. If you want to learn more about my game design experience, 
+											   and fun games as a result of a properly designed procedural rhetoric. I am also an active member of the collective <a href="https://gameimpact.fr/">Game Impact</a> 
+											   where we discuss a better and more progressive way to make meaningful games. If you want to learn more about my game design experience, 
 											please check my <a href="https://www.upwork.com/o/profiles/users/_~01173b6fb6278d87ca/" target="_blank">Upwork profile.</a></p>
 
 									</section>
