--- a/index.html
+++ b/index.html
@@ -403,8 +403,8 @@
 			<tr>
 				<th><p style="font-size: x-large;">In this blog, I mostly playtest indie games and give my first impressions about them.</p></th>
 			</tr>
-			<tr>
-				<th style="align-content: center"><div class="tumblr-post" data-href="https://embed.tumblr.com/embed/post/8IWEwcU1LFNkiJ3vdx_HXw/631358971063779328" style="align-content: center;" data-did="b6e2dfb106e557e99d6f5b733271c1dd2dce277d"><a href="https://nielisson.tumblr.com/post/631358971063779328/id-like-to-describe-this-as-a-cozy-stress-free">https://nielisson.tumblr.com/post/631358971063779328/id-like-to-describe-this-as-a-cozy-stress-free</a></div>  <script async src="https://assets.tumblr.com/post.js"></script></th>
+			<tr style="align-content: center">
+				<th><center><div class="tumblr-post" data-href="https://embed.tumblr.com/embed/post/8IWEwcU1LFNkiJ3vdx_HXw/631358971063779328" style="align-content: center;" data-did="b6e2dfb106e557e99d6f5b733271c1dd2dce277d"><a href="https://nielisson.tumblr.com/post/631358971063779328/id-like-to-describe-this-as-a-cozy-stress-free">https://nielisson.tumblr.com/post/631358971063779328/id-like-to-describe-this-as-a-cozy-stress-free</a></div>  <script async src="https://assets.tumblr.com/post.js"></script></center></th>
 			</tr>
 			<tr>
 				<th><p>Read more on my <a href="https://nielisson.tumblr.com">Tumblr</a>.</p></th>
