--- a/sp.html
+++ b/sp.html
@@ -9,7 +9,7 @@
 	<body>
 		<ul><h2>Documents to print:</h2>
 		<li><a href="/documents/AttestationDroits.pdf" target="_blank"> attestation amelie</a>;</li>
-		<li>attestation de réussite (?)</li>
+		<li><a href="/documents/timbre.pdf" target="_blank"> timbre fiscal</a></li>
 	</ul>
 	</body>
 </html>
