--- a/index.html
+++ b/index.html
@@ -189,6 +189,19 @@
 
 							<div class="col-4 col-6-medium col-12-small">
 								<article class="box style2">
+									<a href="https://magiccoding.itch.io/rabbots" class="image featured" target="_blank"><img src="images/portfolio_thumbnails/rabbots.png" alt="" /></a>
+									<h3><a href="https://magiccoding.itch.io/rabbots" target="_blank">Rabbots</a></h3> 
+									<p style="font-size: small;"><i>Personal project - 03/2020</i></p>
+									<p>Sick and tired of getting job refusals because of his “non-compliant” status,  Nio  wears a rabbit mask and goes against the tyrannical 
+										government that is controlled by an evil artificial intelligence.</p>
+									<p>Roles: <b>Art | Game and Level Design</b></p>	
+									<a href="XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX" class="button small scrolly" target="_blank">Watch</a>							
+									<a href="https://magiccoding.itch.io/rabbots" class="button small scrolly" target="_blank">Play</a>
+								</article>
+							</div>
+
+							<div class="col-4 col-6-medium col-12-small">
+								<article class="box style2">
 									<a href="https://uchiro.itch.io/downwards" class="image featured" target="_blank"><img src="images/portfolio_thumbnails/downwards.gif" alt="" /></a>
 									<h3><a href="https://uchiro.itch.io/downwards" target="_blank">Downwards</a></h3> 
 									<p style="font-size: small;"><i>Weekly Game Jam - Week 49 - 07/2018</i></p>
