--- a/sp.html
+++ b/sp.html
@@ -8,8 +8,7 @@
 	</head>
 	<body>
 		<ul><h2>Documents to print:</h2>
-		<li><a href="/documents/AttestationDroits.pdf" target="_blank"> attestation amelie</a>;</li>
-		<li><a href="/documents/timbre.pdf" target="_blank"> timbre fiscal</a></li>
+		<li>nada à imprimer</li>
 	</ul>
 	</body>
 </html>
