--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
 									<p>Sick and tired of getting job refusals because of his “non-compliant” status,  Nio  wears a rabbit mask and goes against the tyrannical 
 										government that is controlled by an evil artificial intelligence.</p>
 									<p>Roles: <b>Art | Game and Level Design</b></p>	
-									<a href="XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX" class="button small scrolly" target="_blank">Watch</a>							
+									<a href="https://youtu.be/OKMTaAhcyyw" class="button small scrolly" target="_blank">Watch</a>							
 									<a href="https://magiccoding.itch.io/rabbots" class="button small scrolly" target="_blank">Play</a>
 								</article>
 							</div>
