--- a/index.html
+++ b/index.html
@@ -531,6 +531,7 @@
 			<script src="assets/js/breakpoints.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
-
+			
+			<button onclick="topFunction()" id="myBtn" title="Go to top">Top</button> 
 	</body>
 </html>
