--- a/index.html
+++ b/index.html
@@ -45,7 +45,9 @@
 				</div>
 			</article>
 
+		<!-- Botao Scroll UP -->
 
+			<button onclick="topFunction()" id="myBtn" title="Go to top">Top</button> 
 
 		<!-- Portfolio -->
 			<article id="portfolio" class="wrapper style3">
@@ -531,7 +533,6 @@
 			<script src="assets/js/breakpoints.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
-			
-			<button onclick="topFunction()" id="myBtn" title="Go to top">Top</button> 
+
 	</body>
 </html>
