--- a/index.html
+++ b/index.html
@@ -246,32 +246,6 @@
 			</article>
 
 
-	<!-- Botao Scroll UP -->
-
-	<button onclick="topFunction()" id="myBtn" title="Go to top">Top</button> 
-	
-	<script>
-		//Get the button
-		var mybutton = document.getElementById("myBtn");
-		
-		// When the user scrolls down 20px from the top of the document, show the button
-		window.onscroll = function() {scrollFunction()};
-		
-		function scrollFunction() {
-		  if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
-			mybutton.style.display = "block";
-		  } else {
-			mybutton.style.display = "none";
-		  }
-		}
-		
-		// When the user clicks on the button, scroll to the top of the document
-		function topFunction() {
-		  document.body.scrollTop = 0;
-		  document.documentElement.scrollTop = 0;
-		}
-		</script>
-
 
 		<!-- Other prototypes -->
 			<article id="other-prototypes" class="wrapper style5">
@@ -552,6 +526,32 @@
 					</footer>
 				</div>
 			</article>
+
+<!-- Botao Scroll UP -->
+
+	<center><button onclick="topFunction()" id="myBtn" title="Go to top">Top</button></center>
+	
+	<script>
+		//Get the button
+		var mybutton = document.getElementById("myBtn");
+		
+		// When the user scrolls down 20px from the top of the document, show the button
+		window.onscroll = function() {scrollFunction()};
+		
+		function scrollFunction() {
+		  if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
+			mybutton.style.display = "block";
+		  } else {
+			mybutton.style.display = "none";
+		  }
+		}
+		
+		// When the user clicks on the button, scroll to the top of the document
+		function topFunction() {
+		  document.body.scrollTop = 0;
+		  document.documentElement.scrollTop = 0;
+		}
+		</script>
 
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
