--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 				<div class="container">
 					<header>
 						<h2>Portfolio</h2>
-						<p>These are my favorite games, some of them are personal or student projects, and many of them are from game jams.</p>
+						<p>These are my favorite games. Some of them are personal or student projects, and many of them are from game jams.</p>
 					</header>
 					<div class="row">
 						<div class="col-4 col-6-medium col-12-small">
@@ -339,7 +339,7 @@
 										<h3>Game Design</h3>
 									<br>
 									<p align="justify">Having completed a master's degree in Fine Arts with a specialization in Game Design, I have acquired all the tools 
-									needed to create a coherent and meaningful design for different genres of games. I am very fond of the "coziness" concept and the 
+									needed to create a coherent and meaningful design for different genres of games. I am well acquainted with the "coziness" concept and the 
 									procedural rhetoric which I have studied in depth throughout my academic years.
 									</p>
 											<ul>
@@ -357,10 +357,10 @@
 										<img src="images/icon_unity.png" width="300" height="300" alt="">
 										
 										<h3>Development</h3>
-										<p align="justify">Most of my games were made on Unity, so I am quite capable on this software. Besides the standard functionalities, 
+										<p align="justify">Most of my games were made on Unity, so I have a lot of experience working on this software. Besides the standard functionalities, 
 										I am also familiar with Pro Builder, Tilemap system, 
-										Post Processing and the particle system. Futhermore, I have learned how to code in C#, which allows me to assist the programmer. That also 
-										provided me the vocabulary and the clarity needed to communicate my ideas to the team.</p>
+										Post Processing and the particle system. Futhermore, I have experience coding in C#, which allows me to assist the programmer. 
+										This knowledge and technical ability allows me to work independently, as well as to communicate and work efficiently with the team.</p>
 									</section>
 								</div>	
 
@@ -370,7 +370,7 @@
 										<img src="images/icon_art2.png" width="300" height="300"  alt="">
 										
 										<h3>Art</h3>
-										<p align="justify">While my specialty is 2D art, including UI interface, I am also endeavoring in the low-poly 3D environment.</p>
+										<p align="justify">While my specialty is 2D art, including UI interfaces, I've also had the opportunity to develop skills in the low-poly 3D art.</p>
 										<ul>
 											<li><a href="https://www.behance.net/nielisson" target="_blank">Illustrations</a></li>
 											<li><a href="https://www.behance.net/gallery/77308707/Photography" target="_blank">Photography</a></li>
