--- a/index.html
+++ b/index.html
@@ -45,10 +45,8 @@
 					
 					<div class="row">
 						<div class="col-4 col-5-large col-12-medium">
-					<p>“For many game players, games exist for entertainment, for passing the time, for fun. They are a diversionary activity, meant for relaxation or 
-					distraction—a “not- work” space where players are free to engage in fantasy narratives, amazing feats, and rewarding tasks. But what if certain 
-					games have become something more?”<br>
-― Mary Flanagan, Critical Play: Radical Game Design </p>
+					<p>“Games are legitimate forms of media, human expression, and cultural importance”<br>
+						― Mary Flanagan, Critical Play: Radical Game Design  </p>
 						</div>
 					</div>
 
