--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 					</div>
 					
 					<div class="row">
-						<div class="col-4 col-5-large col-12-medium">
+						<div class="col-7-large">
 					<p>“Games are legitimate forms of media, human expression, and cultural importance”<br>
 						― Mary Flanagan, Critical Play: Radical Game Design  </p>
 						</div>
