--- a/index.html
+++ b/index.html
@@ -42,7 +42,9 @@
 							
 						</div>
 					</div>
-					
+				</div>	
+
+				<div class="container"></div>
 					<div class="row">
 						<div class="col-7-large">
 					<p>“Games are legitimate forms of media, human expression, and cultural importance”<br>
