--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 				<div class="container"></div>
 					<div class="row">
 						<div class="col-7-large">
-					<p>“Games are legitimate forms of media, human expression, and cultural importance”<br>
+					<p style="font-size: small;">“Games are legitimate forms of media, human expression, and cultural importance”<br>
 						― Mary Flanagan, Critical Play: Radical Game Design  </p>
 						</div>
 					</div>
