--- a/index.html
+++ b/index.html
@@ -43,7 +43,9 @@
 						</div>
 					</div>
 				</div>	
+			</article>
 
+			<article id="top" class="wrapper style1">
 				<div class="container"></div>
 					<div class="row">
 						<div class="col-7-large">
