--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
 
 					</div>
 					<footer>
-						<p>Do you have any question?</p>
+						<p>Do you have any questions?</p>
 						<a href="#contact" class="button large scrolly">Get in touch with me</a>
 					</footer>
 				</div>
@@ -533,6 +533,10 @@
 					<footer>
 						<ul id="copyright">
 							<li><font size="2">&copy; Nielisson Mendonça. All rights reserved.</li><li>Design: <a href="http://html5up.net" target="_blank">HTML5 UP</a></font></li>
+							<li></li>
+							<li><a href="documents/CV_Nielisson-Mendonca-Da-Silva_EN.pdf" class="button large scrolly" target="_blank">Download my resume</a>
+								<a href="documents/CV_Nielisson-Mendonca-Da-Silva_FR.pdf" class="button large scrolly" target="_blank">Télécharger mon CV</a>		
+								</li>
 						</ul>
 					</footer>
 				</div>
