--- a/index.html
+++ b/index.html
@@ -46,12 +46,10 @@
 			</article>
 
 			<article id="top" class="wrapper style1">
-				<div class="container"></div>
-					<div class="row">
-						<div class="col-7-large">
-					<p style="font-size: small;">“Games are legitimate forms of media, human expression, and cultural importance”<br>
+				<div class="container">
+					<p style="font-size: x-large; text-align: center; align-content: center;">“Games are legitimate forms of media, human expression, and cultural importance”<br>
 						― Mary Flanagan, Critical Play: Radical Game Design  </p>
-						</div>
+						
 					</div>
 
 				</div>
