--- a/index.html
+++ b/index.html
@@ -529,11 +529,10 @@
 						</div>
 					</div>
 					<footer>
-						<ul>
-						<li><a href="documents/CV_Nielisson-Mendonca-Da-Silva_EN.pdf" class="button large scrolly" target="_blank">Download my resume</a>
+						<div class="container" style="align-content: center; contain">
+							<a href="documents/CV_Nielisson-Mendonca-Da-Silva_EN.pdf" class="button large scrolly" target="_blank">Download my resume</a>
 							<a href="documents/CV_Nielisson-Mendonca-Da-Silva_FR.pdf" class="button large scrolly" target="_blank">Télécharger mon CV</a>		
-							</li>
-						</ul>
+						</div>
 
 						<ul id="copyright">
 							<li><font size="2">&copy; Nielisson Mendonça. All rights reserved.</li><li>Design: <a href="http://html5up.net" target="_blank">HTML5 UP</a></font></li>
