--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 								<h3><a href="https://nielisson.itch.io/candy-tower" target="_blank">Candy Tower</a></h3>
 								<p style="font-size: small;"><i>Student project - 08/2020</i></p>
 								<p>In this tower defense, your main objective is to destroy all teeth with candies! Isn't that what candies do?</p>
-								<p>Roles: <b><font color=#46d676>Art</font> | <font color=#d61abf>Programming</font></b></p>
+								<p>Roles: <b><font color=#1ea637>Art</font> | <font color=#9c4ccd>Programming</font></b></p>
 								<a href="https://youtu.be/GnKbWBe_xkk" class="button small scrolly" target="_blank">Watch</a>																																															
 								<a href="https://nielisson.itch.io/candy-tower" class="button small scrolly" target="_blank">Play</a>
 								
@@ -83,7 +83,7 @@
 								<h3><a href="https://dyoxyne.itch.io/playback-brackeys-jam-20202" target="_blank">Playback</a></h3>
 								<p style="font-size: small;"><i>Brackeys Jam 2020.2 - 08/2020</i></p>
 								<p>Everyone in town is looking for something to brighten up their day. With the help of your cassette recorder, you can record and rewind the sounds that people need to turn their moods around! Watch <a href="https://youtu.be/OcjV2M3Y9Wg?t=310" target="_blank">Brackeys </a>playing our game.</p>
-								<p>Roles: <b>Art | Game Design</b></p>
+								<p>Roles: <b>Art | <font color=#0490c8>Game Design</font></b></p>
 								<a href="https://youtu.be/OcjV2M3Y9Wg?t=310" class="button small scrolly" target="_blank">Watch</a>																																															
 								<a href="https://dyoxyne.itch.io/playback-brackeys-jam-20202" class="button small scrolly" target="_blank">Play</a>
 							</article>
