--- a/index.html
+++ b/index.html
@@ -545,7 +545,7 @@
 
 <!-- Botao Scroll UP -->
 
-<button onclick="topFunction()" id="myBtn" title="Go to top"><img src="images/Icons/top_btn.png" height="30" height="30"></button>
+<button onclick="topFunction()" id="myBtn" title="Go to top"><img src="images/Icons/top_btn.png" height="30px" height="30px"></button>
 	
 	<script>
 		//Get the button
