--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 								<h3><a href="http://greedfall.com/" target="_blank">Greedfall</a></h3>
 								<p style="font-size: small;"><i>(PC, XBOX One and PS4)</i></p>
 								<p>As a GUI integrator, I was responsible for the integration of the UI assets and I also retouched/created several icons and other elements.</p>
-								<p>Role: <b><font color=#f06f4f>GUI artist and Integrator (internship)</font> </b></p>			
+								<p>Role: <b><font color=#a85265>GUI artist and Integrator (internship)</font> </b></p>			
 								<a href="https://youtu.be/_if32pyZP2w" class="button small scrolly" target="_blank">Watch</a>																																							
 								<a href="http://greedfall.com/" class="button small scrolly" target="_blank">Play</a>
 							</article>
