--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
 								<p style="font-size: small;"><i>Student project - 08/2020</i></p>
 								<p>In this tower defense, your main objective is to destroy all teeth with candies! Isn't that what candies do?</p>
 								<p>Roles: <b><font color=#1a4f63>Art</font> | <font color=#57385c>Programming</font></b></p>
+								<p>Team composition: 1 person</p>
 								<a href="https://youtu.be/GnKbWBe_xkk" class="button small scrolly" target="_blank">Watch</a>																																															
 								<a href="https://nielisson.itch.io/candy-tower" class="button small scrolly" target="_blank">Play</a>
 								
@@ -84,6 +85,7 @@
 								<p style="font-size: small;"><i>Brackeys Jam 2020.2 - 08/2020</i></p>
 								<p>Everyone in town is looking for something to brighten up their day. With the help of your cassette recorder, you can record and rewind the sounds that people need to turn their moods around! Watch <a href="https://youtu.be/OcjV2M3Y9Wg?t=310" target="_blank">Brackeys </a>playing our game.</p>
 								<p>Roles: <b><font color=#1a4f63>Art</font> | <font color=#f06f4f>Game Design</font></b></p>
+								<p>Team composition: 4 people</p>
 								<a href="https://youtu.be/OcjV2M3Y9Wg?t=310" class="button small scrolly" target="_blank">Watch</a>																																															
 								<a href="https://dyoxyne.itch.io/playback-brackeys-jam-20202" class="button small scrolly" target="_blank">Play</a>
 							</article>
@@ -94,7 +96,8 @@
 								<h3><a href="http://greedfall.com/" target="_blank">Greedfall</a></h3>
 								<p style="font-size: small;"><i>(PC, XBOX One and PS4)</i></p>
 								<p>As a GUI integrator, I was responsible for the integration of the UI assets and I also retouched/created several icons and other elements.</p>
-								<p>Role: <b><font color=#a85265>GUI artist and Integrator (internship)</font> </b></p>			
+								<p>Role: <b><font color=#a85265>GUI artist and Integrator (internship)</font> </b></p>
+								<p>Team composition: 192 people</p>		
 								<a href="https://youtu.be/_if32pyZP2w" class="button small scrolly" target="_blank">Watch</a>																																							
 								<a href="http://greedfall.com/" class="button small scrolly" target="_blank">Play</a>
 							</article>
@@ -107,6 +110,7 @@
 								The Tenth Creative Games Jam - 02/2019</i></p>
 								<p>In this little puzzle, the player is supposed to make a clear path for a dog that is trapped in a house on fire. Watch the gameplay by the youtuber Nathan Blake.</p>
 								<p>Roles: <b><font color=#1a4f63>Art</font> | <font color=#f06f4f>Game and Level Design</font></b></p>
+								<p>Team composition: 3 people</p>
 								<a href="https://www.youtube.com/watch?v=TJwKPe-8M9E&feature=emb_title" class="button small scrolly" target="_blank">Watch</a>																															
 								<a href="https://nielisson.itch.io/sky-puppy" class="button small scrolly" target="_blank">Play</a>
 							</article>
@@ -117,7 +121,8 @@
 								<h3><a href="https://nielisson.itch.io/tiny-elves" target="_blank">Tiny Elves: mighty friendship</a></h3>
 								<p style="font-size: small;"><i>Personal project - 09/2019</i></p>
 								<p>Lost in a strange world, these tiny elves will have to make proof of their friendship by working together.</p>
-								<p>Roles: <b><font color=#1a4f63>Art</font> | <font color=#f06f4f>Game and Level Design</font></b></p>	
+								<p>Roles: <b><font color=#1a4f63>Art</font> | <font color=#f06f4f>Game and Level Design</font></b></p>
+								<p>Team composition: 3 people</p>
 								<a href="https://youtu.be/_xvAYG30d5g" class="button small scrolly" target="_blank">Watch</a>																							
 								<a href="https://nielisson.itch.io/tiny-elves" class="button small scrolly" target="_blank">Play</a>
 								
@@ -130,7 +135,8 @@
 								<h3><a href="https://www.youtube.com/watch?v=gSYmrgwn3Lo&feature=youtu.be" target="_blank">Le maître de la flûte en bois</a></h3>
 								<p style="font-size: small;"><i>Student project - 12/2018</i></p>
 								<p>An adventure about a forest spirit that accompany a flock of birds that are migrating to the south.</p>
-								<p>Roles: <b><font color=#1a4f63>Art</font> | <font color=#f06f4f>Game and Level Design</font></b></p>								
+								<p>Roles: <b><font color=#1a4f63>Art</font> | <font color=#f06f4f>Game and Level Design</font></b></p>	
+								<p>Team composition: 2 people</p>							
 								<a href="https://www.youtube.com/watch?v=gSYmrgwn3Lo&feature=youtu.be" class="button small scrolly" target="_blank">Watch</a>
 							</article>
 						</div>
@@ -141,7 +147,8 @@
 								<h3><a href="https://nielisson.itch.io/wyvern-circus" target="_blank">Wyvern Circus</a></h3>
 								<p style="font-size: small;"><i>ArtBook and game prototype - 03/2019</i></p>
 								<p>A working dragon who caught a cold. What could go wrong?</p>
-								<p>Roles: <b><font color=#1a4f63>Art</font> | <font color=#f06f4f>Game and Level Design</font></b></p>	
+								<p>Roles: <b><font color=#1a4f63>Art</font> | <font color=#f06f4f>Game and Level Design</font></b></p>
+								<p>Team composition: 3 people</p>	
 								<a href="https://www.behance.net/gallery/79393471/Wyvern-Circus-Artbook" class="button small scrolly" target="_blank">Artbook</a>																							
 								<a href="https://nielisson.itch.io/wyvern-circus" class="button small scrolly" target="_blank">Play</a>
 							</article>
@@ -153,7 +160,8 @@
 								<h3><a href="https://nielisson.itch.io/great-ocean-truck" target="_blank">Great Ocean Truck</a></h3>
 								<p style="font-size: small;"><i>Personal project - 10/2019</i></p>
 								<p>When moving out is all about fun and balance!</p>
-								<p>Roles: <b><font color=#1a4f63>Art</font> | <font color=#f06f4f>Game and Level Design</font></b></p>								
+								<p>Roles: <b><font color=#1a4f63>Art</font> | <font color=#f06f4f>Game and Level Design</font></b></p>	
+								<p>Team composition: 2 people</p>							
 								<a href="https://www.youtube.com/watch?v=jHvJbw-N3Ak&list=PL2HDE-lq9I_DfnDnGb0Zb0CouIHbHMrnO&index=4&t=0s" class="button small scrolly" target="_blank">Watch</a>															
 								<a href="https://nielisson.itch.io/great-ocean-truck" class="button small scrolly" target="_blank">Play</a>
 							</article>
@@ -168,6 +176,7 @@
 								<p>During a brisk autumn night, Hugo wanders the streets in search for his love with utterly no regard for his surroundings. 
 									Our game was featured on <a href="https://youtu.be/XeV0bmTLacM?t=83" target="_blank">Brackeys' channel!</a></p>
 								<p>Roles: <b><font color=#1a4f63>Art</font> | <font color=#f06f4f>Game and Level Design</font></b></p>	
+								<p>Team composition: 3 people</p>
 								<a href="https://youtu.be/GNpKn6mdovk" class="button small scrolly" target="_blank">Watch</a>							
 								<a href="https://nielisson.itch.io/note-to-self" class="button small scrolly" target="_blank">Play</a>
 							</article>
@@ -179,7 +188,8 @@
 									<h3><a href="https://nielisson.itch.io/nobamboo" target="_blank">NoBamboo</a></h3> 
 									<p style="font-size: small;"><i>Extra Credits Game Jam - 03/2019</i></p>
 									<p>Ferdinand was entrusted three special eggs and his mission is to deliver them to the White Temple in order to restore the balance of world.</p>
-									<p>Roles: <b><font color=#1a4f63>Art</font> | <font color=#f06f4f>Game and Level Design</font></b></p>	
+									<p>Roles: <b><font color=#1a4f63>Art</font> | <font color=#f06f4f>Game and Level Design</font></b></p>
+									<p>Team composition: 3 people</p>	
 									<a href="https://youtu.be/TKyT1Yqcmc0" class="button small scrolly" target="_blank">Watch</a>							
 									<a href="https://nielisson.itch.io/nobamboo" class="button small scrolly" target="_blank">Play</a>
 								</article>
