--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Nielisson Mendonça: 2D Artist and Game Designer</title>
+		<title>Nielisson Mendonça: Game and Level Designer</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -36,7 +36,7 @@
 							<header>
 								<h1><strong>Nielisson Mendonça</strong></h1>
 							</header>
-							<p>2D artist, Game and Level Designer</p>
+							<p>Game and Level Designer</p>
 							<a href="documents/CV_Nielisson-Mendonca-Da-Silva_EN.pdf" class="button large scrolly" target="_blank">Download my resume</a>
 							<a href="documents/CV_Nielisson-Mendonca-Da-Silva_FR.pdf" class="button large scrolly" target="_blank">Télécharger mon CV</a>		
 							
