--- a/index.html
+++ b/index.html
@@ -220,6 +220,8 @@
 									<p>Team composition: 2 people</p>	
 									<a href="https://youtu.be/OKMTaAhcyyw" class="button small scrolly" target="_blank">Watch</a>							
 									<a href="https://magiccoding.itch.io/rabbots" class="button small scrolly" target="_blank">Play</a>
+									<a href="https://drive.google.com/file/d/1u66LbpjxL7zfAGTer0tMLGdT_TMb4q4R/view?usp=sharings" class="button small scrolly" target="_blank">GDD</a>
+									
 								</article>
 							</div>
 
