--- a/index.html
+++ b/index.html
@@ -351,6 +351,23 @@
 							</article>
 						</div>
 
+						<div class="col-4 col-6-medium col-12-small">
+							<article class="box style2">
+								<a href="https://nielisson.itch.io/mooi" class="image featured" target="_blank"><img src="images/portfolio_thumbnails/chickenout.png" alt="Mooi" /></a>
+								<h3><a href="ADD MORE INFO" target="_blank">Chicken Out</a></h3>
+								<p>School project - 12/2019</p>
+								<p>Chicken Out is an experimental game where two players can either fight against each other or they can work together in order to survive. We have 
+									used an alternative controller for this project, so we could apply a gestural rhetoric that matches the gameplay, accentuating even more the immersion. Read our concise GDD (powerpoint version) for more.
+								</p>
+								<p>Roles: <b><font color=#1a4f63>Art</font> | <font color=#f06f4f>Game Design</font></b></p>
+								<p>Team composition: 3 people</p>
+							<!--	<a href="_____not yet_______" class="button small scrolly" target="_blank">Watch</a>	-->
+								<a href="documents/Presentation_chicken_Out.pdf" class="button small scrolly" target="_blank">Learn More</a>																																																
+																																															
+							</article>
+						</div>
+
+
 					</div>
 				</div>
 				</article>
