--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
 									<p style="font-size: small;"><i>Personal project - 03/2020</i></p>
 									<p>Sick and tired of getting job refusals because of his “non-compliant” status,  Nio  wears a rabbit mask and goes against the tyrannical 
 										government that is controlled by an evil artificial intelligence.</p>
-										<p>Please check out the <a href="https://drive.google.com/file/d/1u66LbpjxL7zfAGTer0tMLGdT_TMb4q4R/view?usp=sharings" class="button small scrolly" target="_blank">GDD</a> and the creative process</p>
+										<p>Please check out the <a href="https://drive.google.com/file/d/1u66LbpjxL7zfAGTer0tMLGdT_TMb4q4R/view?usp=sharings" target="_blank">GDD</a> and the creative process</p>
 									<p>Roles: <b><font color=#1a4f63>Art</font> | <font color=#f06f4f>Game and Level Design</font></b></p>
 									<p>Team composition: 2 people</p>	
 									<a href="https://youtu.be/OKMTaAhcyyw" class="button small scrolly" target="_blank">Watch</a>							
