--- a/index.html
+++ b/index.html
@@ -367,6 +367,22 @@
 							</article>
 						</div>
 
+						<div class="col-4 col-6-medium col-12-small">
+							<article class="box style2">
+								<a href="" class="image featured" target="_blank"><img src="images/portfolio_thumbnails/map.png" alt="Level Design" /></a>
+								<h3><a href="https://docs.google.com/document/d/1HcH7RdhQNd42AN-bNwyeGFaB2slfVrz9PpxKtLvfqvQ/edit#" target="_blank">Unusual Adeventure - Level Design</a></h3>
+								<p>Student project - 01/2020</p>
+								<p>I've created the whole map of a fantasy RPG game, including quests and the paths that the players may take. The level design is entirely explained in the Unusual Adventure's GDD.
+								</p>
+								<p>Roles: <b><font color=#1a4f63>Art</font> | <font color=#f06f4f>Game Design</font></b></p>
+								<p>Team composition: solo</p>
+							<!--	<a href="_____not yet_______" class="button small scrolly" target="_blank">Watch</a>	-->
+								<center><a href="https://docs.google.com/document/d/1HcH7RdhQNd42AN-bNwyeGFaB2slfVrz9PpxKtLvfqvQ/edit#" class="button small scrolly" target="_blank">GDD</a></center>																																																
+																																															
+							</article>
+						</div>
+
+
 
 					</div>
 				</div>
