--- a/index.html
+++ b/index.html
@@ -131,6 +131,21 @@
 
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
+								<a href="https://nielisson.itch.io/fell-off-the-moon" class="image featured" target="_blank"><img src="images/portfolio_thumbnails/tinyelves.gif" alt="" /></a>
+								<h3><a href="https://nielisson.itch.io/fell-off-the-moon" target="_blank">Fell Off The Moon</a></h3>
+								<p style="font-size: small;"><i>Personal project - 12/2019</i></p>
+								<p>Pawpaw, originally from the Moon, had a terrible crash while he was passing by the Earth: his spaceship got 
+									totally destroyed. He has to gather as many "gift boxes" as possible in order to repair his spacecraft, so he can go back home!</p>
+								<p>Roles: <b><font color=#1a4f63>Art</font> | <font color=#f06f4f>Game and Level Design</font></b></p>
+								<p>Team composition: 4 people</p>
+								<a href=" " class="button small scrolly" target="_blank">Watch</a>																							
+								<a href="https://nielisson.itch.io/fell-off-the-moon" class="button small scrolly" target="_blank">Play</a>
+								
+							</article>
+						</div>
+
+						<div class="col-4 col-6-medium col-12-small">
+							<article class="box style2">
 								<a href="https://www.youtube.com/watch?v=gSYmrgwn3Lo&feature=youtu.be" class="image featured" target="_blank"><img src="images/portfolio_thumbnails/lemaitre.png" alt="" /></a>
 								<h3><a href="https://www.youtube.com/watch?v=gSYmrgwn3Lo&feature=youtu.be" target="_blank">Le maître de la flûte en bois</a></h3>
 								<p style="font-size: small;"><i>Student project - 12/2018</i></p>
