--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="https://nielisson.itch.io/fell-off-the-moon" class="image featured" target="_blank"><img src="images/portfolio_thumbnails/tinyelves.gif" alt="" /></a>
+								<a href="https://nielisson.itch.io/fell-off-the-moon" class="image featured" target="_blank"><img src="images/portfolio_thumbnails/fom_thumbnail.png" alt="" /></a>
 								<h3><a href="https://nielisson.itch.io/fell-off-the-moon" target="_blank">Fell Off The Moon</a></h3>
 								<p style="font-size: small;"><i>Personal project - 12/2019</i></p>
 								<p>Pawpaw, originally from the Moon, had a terrible crash while he was passing by the Earth: his spaceship got 
